[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/abilities/shoot/Shoot.gd" type="Script" id=1]
[ext_resource path="res://player/abilities/shoot/empty.wav" type="AudioStream" id=2]
[ext_resource path="res://player/weapons/AK-47.obj" type="ArrayMesh" id=3]
[ext_resource path="res://player/abilities/shoot/Impact.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/abilities/shoot/rifle_shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://player/abilities/shoot/MuzzleFlash.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/abilities/shoot/Shell.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/abilities/shoot/AK-47_Magazine.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/abilities/shoot/reload.wav" type="AudioStream" id=9]
[ext_resource path="res://player/abilities/shoot/melee_hit.wav" type="AudioStream" id=10]
[ext_resource path="res://font/Roboto-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://player/abilities/shoot/bullet_impact.wav" type="AudioStream" id=12]
[ext_resource path="res://player/weapons/M1911.obj" type="ArrayMesh" id=13]
[ext_resource path="res://player/abilities/shoot/pistol_shoot.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="Shoot" type="Spatial"]
script = ExtResource( 1 )
impact = ExtResource( 4 )
muzzle_flash_mesh = ExtResource( 6 )
shell_mesh = ExtResource( 7 )
magazine_mesh = ExtResource( 8 )
rifle_shoot_sound = ExtResource( 5 )
pistol_shoot_sound = ExtResource( 14 )
reload_sound = ExtResource( 9 )
empty_sound = ExtResource( 2 )
bullet_impact_sound = ExtResource( 12 )
melee_hit_sound = ExtResource( 10 )
rifle_model = ExtResource( 3 )
pistol_model = ExtResource( 13 )

[node name="MeleeAttackRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.337973, 0.138936, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.85 )

[node name="BulletSpread" type="Position3D" parent="."]

[node name="RayCast" type="RayCast" parent="BulletSpread"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="JumpFall" type="Position3D" parent="."]

[node name="Aim" type="Position3D" parent="JumpFall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.1, -0.2 )

[node name="WeaponSwitch" type="Position3D" parent="JumpFall/Aim"]

[node name="MeleeAttack" type="Position3D" parent="JumpFall/Aim/WeaponSwitch"]

[node name="Slide" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack"]

[node name="SwayBobbingIdle" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide"]

[node name="OrientationWalkRun" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle"]

[node name="LookAt" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun"]

[node name="Shoot" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt"]

[node name="Direction" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot"]

[node name="Reload" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.06, -0.06 )

[node name="WeaponModel" type="MeshInstance" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot/Reload"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06, 0.06 )
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null

[node name="Muzzle" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot/Reload/WeaponModel"]
transform = Transform( 1, -2.64698e-23, 0, 4.44089e-16, 1, 0, 0, 0, 1, 0, 1.49012e-08, -0.680228 )

[node name="Shell" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot/Reload/WeaponModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0452856, 0.0195128, -0.188937 )

[node name="Magazine" type="Position3D" parent="JumpFall/Aim/WeaponSwitch/MeleeAttack/Slide/SwayBobbingIdle/OrientationWalkRun/LookAt/Shoot/Reload/WeaponModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.115179, -0.186946 )

[node name="WeaponTween" type="Tween" parent="."]

[node name="HBobbingTween" type="Tween" parent="."]

[node name="VBobbingTween" type="Tween" parent="."]

[node name="ReloadTween" type="Tween" parent="."]

[node name="LandingTween" type="Tween" parent="."]

[node name="AmmoTextTween" type="Tween" parent="."]

[node name="MeleeAttackTween" type="Tween" parent="."]

[node name="AimTween" type="Tween" parent="."]

[node name="OrientationWalkRunTween" type="Tween" parent="."]

[node name="SlideTween" type="Tween" parent="."]

[node name="WeaponSwitchTween" type="Tween" parent="."]

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RecoilTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MagazineTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeleeAttackTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="WeaponSwitchModelTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DisplayAmmo" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -83.0
margin_right = -50.0
margin_bottom = -47.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoText" type="Label" parent="DisplayAmmo"]
margin_right = 34.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "30"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slash" type="Label" parent="DisplayAmmo"]
margin_left = 38.0
margin_right = 50.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "/"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClipText" type="Label" parent="DisplayAmmo"]
margin_left = 54.0
margin_right = 88.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "90"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="RecoilTimer" to="." method="_on_RecoilTimer_timeout"]
[connection signal="timeout" from="MagazineTimer" to="." method="_on_MagazineTimer_timeout"]
[connection signal="timeout" from="MeleeAttackTimer" to="." method="_on_MeleeAttackTimer_timeout"]
[connection signal="timeout" from="WeaponSwitchModelTimer" to="." method="_on_WeaponSwitchModelTimer_timeout"]
